--- a/Android/AndroidRecyclerViewDataBinding/app/src/main/res/layout/activity_main.xml
+++ b/Android/AndroidRecyclerViewDataBinding/app/src/main/res/layout/activity_main.xml
@@ -2,9 +2,13 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data>
 
+    <data>
+        <variable
+            name="myAdapter"
+            type="com.journaldev.androidrecyclerviewdatabinding.MyRecyclerViewAdapter" />
     </data>
+
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -14,6 +18,8 @@
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:adapter="@{myAdapter}"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
