Google Maps styling code updated

--- a/Android/AndroidGoogleMapsStyling/app/src/debug/res/values/google_maps_api.xml
+++ b/Android/AndroidGoogleMapsStyling/app/src/debug/res/values/google_maps_api.xml
@@ -20,5 +20,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBaha_28EUDY-R1GlEDg2nszvkR3lshRHg</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">YOUR_KEY_HERE</string>
 </resources>
